# b4_research

./: README.md  csom.py  csom_class.py  main.py  pyproject.toml
data/: mine.csv  mine2.csv  mine3.csv  pipe.csv
